# monadium

./: .gitignore  Cargo.toml  Dockerfile  Shuttle.toml  monadium_sketch_1.excalidraw  readme.md
.github/workflow/: deploy.yml
.github/workflows/: deploy.yml
.sqlx/: query-43f761f560159b9a48b24eb2a020c07788fc926bd901c165f475ca6c15f8e672.json  query-4ba98e448ec9b783356993f29e0570e4742a54f15069b9fdb6fae0f528e6d205.json  query-cae879b1e2f4ec1e1021e2fc69c292aacb08b695b9f9d55ed37f34208da2d6d9.json
api/axum/: Cargo.toml
api/axum/src/: main.rs
api/lib/: .env.example  Cargo.toml
api/lib/src/: lib.rs  setup.rs
api/lib/src/io/: config.rs  mod.rs  result.rs
api/lib/src/kits/: mod.rs  types.rs
api/lib/src/kits/challenges/: mod.rs
api/lib/src/kits/status/: mod.rs
api/lib/src/kits/web/: mod.rs
api/lib/src/server/io/: mod.rs  repo.rs
api/lib/src/server/kits/challenges/: mod.rs
api/lib/src/web/: mod.rs
api/lib/src/web/kits/course/: mod.rs
api/lib/src/web/kits/study/: mod.rs
api/shuttle/: Cargo.toml  README.md
api/shuttle/.sqlx/: query-1794b4014bb457f3d5426f70911c83bf7d306e8a56f4c2f02c47fefcae9c5cb2.json
api/shuttle/src/: main.rs
db/migrations/: 20230707204800_challenges.sql
src/: backup_main.rs  main.rs
src/components/: mod.rs
src/components/app/: mod.rs
src/components/challenge/: mod.rs
src/components/course/: mod.rs
src/components/headers/: chapter_header.rs  hero_header.rs  mod.rs  page_header.rs  page_title.rs  paragraph_header.rs  section_title.rs
src/components/module/: mod.rs
src/components/study/: mod.rs
src/kits/challenges/: mod.rs
src/kits/status/: mod.rs
src/kits/web/: mod.rs
src/server/: mod.rs
src/server/io/: config.rs  db.rs  env.rs  mod.rs  repo.rs  tracing.rs
src/server/kits/: mod.rs  types.rs
src/server/kits/challenges/: mod.rs
src/services/: mod.rs
src/web/: mod.rs
src/web/app/: mod.rs
src/web/components/: mod.rs
src/web/primitives/: mod.rs
web/: Cargo.toml  Dioxus.toml  package-lock.json  package.json  tailwind.config.js
web/public/: tailwind.css
web/src/: main.rs
web/src/app/: mod.rs
web/src/kits/: mod.rs
web/src/kits/challenge/: mod.rs
web/src/kits/course/: mod.rs
web/src/kits/module/: mod.rs
web/src/kits/study/: mod.rs
web/src/primitives/headers/: section_title.rs
(+13 files in other folders)
