[package]
name = "app"
version = "0.1.0"
edition = "2021"

[features]
default = ["shuttle"]
shuttle = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
dioxus = "0.3.2"
dioxus-ssr = "0.3.0"
dotenvy = "0.15.7"
reqwest = { version = "0.11.18", features = ["json"] }
serde = "1.0.167"
serde_json = "1.0.96"
shuttle-axum = "0.20.0"
shuttle-runtime = "0.20.0"
shuttle-secrets = "0.20.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "mysql", "migrate", "macros", "uuid", "json"] }
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread", "full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = { version = "1.4.0", features = ["v4"] }
