[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4"
dioxus-web = "0.4"
log = "0.4.19"
reqwest = { version = "0.11.18", features = ["json"] }
serde = "1.0.167"
wasm-logger = "0.2.0"
