[package]
name = "api-lib"
version = "0.1.0"
edition = "2021"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "mysql", "migrate", "macros", "uuid", "json"] }
serde = "1.0.167"
serde_json = "1.0.96"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = { version = "1.4.0", features = ["v4"] }
axum = "0.6.18"
shuttle-secrets = "0.20.0"
tower-http = { version = "0.4.1", features = ["fs"] }
