[package]
name = "api-shuttle"
version = "0.1.0"
edition = "2021"

[dependencies]
api-lib = {path = "../lib"}
axum = "0.6.18"
reqwest = { version = "0.11.18", features = ["json"] }
serde = "1.0.167"
serde_json = "1.0.96"
shuttle-axum = "0.20.0"
shuttle-runtime = "0.20.0"
shuttle-secrets = "0.20.0"
sqlx = "0.7.0"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread", "full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = { version = "1.4.0", features = ["v4"] }
